--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -9,8 +9,9 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<spring-version>4.1.7.RELEASE</spring-version>
+		<spring-version>4.2.0.RELEASE</spring-version>
 		<slf4j-version>1.7.12</slf4j-version>
+		<logback.version>1.1.3</logback.version>
 	</properties>
 
 	<dependencies>
@@ -22,6 +23,11 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
 			<version>${spring-version}</version>
 		</dependency>
 		<dependency>
@@ -40,6 +46,16 @@
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>${slf4j-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -51,5 +67,28 @@
 
 	<build>
 		<finalName>scb-data-service</finalName>
+
+		<plugins>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<webApp>
+						<contextPath>/scb-data-service</contextPath>
+					</webApp>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
+
 </project>
