--- a/scb-data-service/src/main/webapp/WEB-INF/web.xml
+++ b/scb-data-service/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
+		<param-value>classpath:scb-data-service-context.xml</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
