--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring-version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>${spring-version}</version>
+		</dependency>
 
 		<!-- SLF4J -->
 		<dependency>
@@ -87,6 +92,13 @@
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-core</artifactId>
 		    <version>2.6.6</version>
+		</dependency>
+		
+		<!-- MySql -->
+		<dependency>
+		    <groupId>com.github.livesense</groupId>
+		    <artifactId>org.liveSense.jdbc.mysql</artifactId>
+		    <version>1.0.5</version>
 		</dependency>
 		
 		<dependency>
