--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,5 +1,5 @@
 txt.ui.organization.name=Plavecký Klub Bohumín
 txt.ui.menu.application=Přihláška do klubu
-txt.ui.menu.dashboard=Dashboard
+txt.ui.menu.dashboard=Úvodní stránka
 
-txt.ui.login=Přihlášení
+txt.ui.login=Přihlášení uživatele
