--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -3,3 +3,27 @@ txt.ui.menu.application=Přihláška do klubu
 txt.ui.menu.dashboard=Úvodní stránka
 
 txt.ui.login=Přihlášení uživatele
+
+txt.ui.common.firstname=Jméno
+txt.ui.common.surname=Příjmení
+txt.ui.common.birthDate=Datum narození
+txt.ui.common.birthNumber=Rodné číslo
+txt.ui.common.healthInsurance=Zdravotní pojišťovna
+txt.ui.common.representative=Zákonný zástupce
+txt.ui.common.phone=Telefon
+txt.ui.common.email=Email
+
+txt.ui.common.child=dítě
+txt.ui.common.participant=Účastník
+
+txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
+txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
+txt.ui.application.personaldataProcessAgreement=Souhlasím se zpracováním osobních údajů podle zákona č. 101/2000 Sb.Souhlasím s možností fotografování svého syna/dcery a s možností zveřejnění fotografií nebo videa v rámci propagace Plaveckého klubu Bohumín. Potvrzuji, že jsem se seznámil s Provozním řádem {0}.
+txt.ui.aquacentrumbohumin=aquacentra Bohumín
+txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/provozni-rad-aqua/
+
+msg.ui.validation.err.valueRequired=Hodnota je povinná.
+msg.ui.validation.err.invalidaEmail=Neplatný formát emailu.
+msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
+
+msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána.
