--- a/scb-data-service-api/pom.xml
+++ b/scb-data-service-api/pom.xml
@@ -1,20 +1,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.jzaoralek.scb</groupId>
-	<artifactId>scb-data-service</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<name>scb-data-service Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.jzaoralek.scb</groupId>
+  <artifactId>scb-data-service-api</artifactId>
+  <packaging>war</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>scb-data-service-api</name>
+  <url>http://maven.apache.org</url>
 
-	<properties>
+  <properties>
 		<spring-version>4.2.0.RELEASE</spring-version>
 		<slf4j-version>1.7.12</slf4j-version>
 		<logback.version>1.1.3</logback.version>
+		<scb.version>1.0-SNAPSHOT</scb.version>
 	</properties>
 
 	<dependencies>
+		
+		<!-- SCB -->
+		<dependency>
+			<groupId>com.jzaoralek.scb</groupId>
+			<artifactId>scb-data-service</artifactId>
+			<version>${scb.version}</version>
+		</dependency>
+	
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -35,11 +44,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring-version}</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-jdbc</artifactId>
-		    <version>${spring-version}</version>
 		</dependency>
 
 		<!-- SLF4J -->
@@ -94,13 +98,6 @@
 		    <version>2.6.6</version>
 		</dependency>
 		
-		<!-- MySql -->
-		<dependency>
-		    <groupId>com.github.livesense</groupId>
-		    <artifactId>org.liveSense.jdbc.mysql</artifactId>
-		    <version>1.0.5</version>
-		</dependency>
-		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -110,8 +107,8 @@
 	</dependencies>
 
 	<build>
-		<finalName>scb-data-service</finalName>
-
+		<finalName>scb-data-service-api</finalName>
+    
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
@@ -119,7 +116,7 @@
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webApp>
-						<contextPath>/scb-data-service</contextPath>
+						<contextPath>/scb-data-service-api</contextPath>
 					</webApp>
 				</configuration>
 			</plugin>
