scb-ui-zk module #2

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -28,5 +28,7 @@ msg.ui.validation.err.valueRequired=Hodnota je povinná.
 msg.ui.validation.err.invalidaEmail=Neplatný formát emailu.
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
-
+msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána.
+msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
+msg.ui.title.deleteRecord=Odstranění záznamu
