--- a/scb-ui-zk/pom.xml
+++ b/scb-ui-zk/pom.xml
@@ -135,7 +135,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>3.0-alpha-1</version>
-			<scope>provided</scope>
+<!-- 			<scope>provided</scope> -->
 		</dependency>
 	</dependencies>
 
