scb-ui-zk module #2, delete course application

--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -1,1 +1,3 @@
-msg.validation.error.participant.surnameMissing=Hodnota p\u0159\u00edjmen\u00ed je povinn\u00e1.
+msg.validation.error.participant.surnameMissing=Hodnota příjmení je povinná.
+
+msg.validation.warn.courseApplication.notExistsInDB=Přihlášku nelze odstranit, protože již v databázi neexistuje. Proveďte obnovení v prohlížeči.
