scb-ui-zk module #2, course application detail and update

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -18,6 +18,7 @@ txt.ui.common.participant=Účastník
 txt.ui.common.createdAt=Datum vytvoření
 txt.ui.common.downloadToFile=Stáhnout do souboru
 txt.ui.common.noDataFound=Nenalezena žádná data
+txt.ui.common.Back=Zpět
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -31,5 +32,6 @@ msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána.
+msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
 msg.ui.title.deleteRecord=Odstranění záznamu
