scb-ui-zk module #2

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,5 +1,6 @@
 txt.ui.organization.name=Plavecký Klub Bohumín
 txt.ui.menu.application=Přihláška do klubu
+txt.ui.menu.applicationWithYear=Přihláška do klubu pro rok {0}
 txt.ui.menu.dashboard=Úvodní stránka
 txt.ui.menu.applicationList=Seznam přihlášek
 
