--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -20,6 +20,11 @@ txt.ui.common.createdAt=Datum vytvoření
 txt.ui.common.downloadToFile=Stáhnout do souboru
 txt.ui.common.noDataFound=Nenalezena žádná data
 txt.ui.common.Back=Zpět
+txt.ui.common.Login=Přihlášení
+txt.ui.common.ToLogin=Přihlásit
+txt.ui.common.ToLogout=Odhlásit
+txt.ui.common.Username=Přihlašovací jméno
+txt.ui.common.password=Heslo
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -36,3 +41,4 @@ msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
 msg.ui.title.deleteRecord=Odstranění záznamu
+msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
