--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -10,6 +10,7 @@
 
 	<properties>
 		<spring-version>4.2.0.RELEASE</spring-version>
+		<spring-security.version>4.0.4.RELEASE</spring-security.version>
 		<slf4j-version>1.7.12</slf4j-version>
 		<logback.version>1.1.3</logback.version>
 	</properties>
@@ -40,6 +41,18 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-jdbc</artifactId>
 		    <version>${spring-version}</version>
+		</dependency>
+		
+		<!-- Spring security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring-security.version}</version>
 		</dependency>
 
 		<!-- SLF4J -->
