--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,4 +1,7 @@
 txt.ui.organization.name=Plavecký Klub Bohumín
+txt.ui.organization.phone=+420 604 920 452
+txt.ui.organization.email=plavanibohumin@seznam.cz
+txt.ui.dashboard.welcomeInfo=Vítejte na stránkách portálu Plaveckého klubu Bohumín.
 txt.ui.menu.application=Přihláška do klubu
 txt.ui.menu.applicationWithYear=Přihláška do klubu pro rok {0}
 txt.ui.menu.dashboard=Úvodní stránka
@@ -37,8 +40,12 @@ msg.ui.validation.err.invalidaEmail=Neplatný formát emailu.
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
-msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána.
+msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
+
+msg.ui.mail.courseApplication.text0=Dobrý den,
+msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
+msg.ui.mail.courseApplication.text2=Tým Plaveckého klubu Bohumín.
