scb-ui-zk module #2, add captcha to course application page

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -38,6 +38,7 @@ txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/prov
 msg.ui.validation.err.valueRequired=Hodnota je povinná.
 msg.ui.validation.err.invalidaEmail=Neplatný formát emailu.
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
+msg.ui.validation.err.WrongValue=Nesprávná hodnota.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
