--- a/scb-ui-zk/pom.xml
+++ b/scb-ui-zk/pom.xml
@@ -106,6 +106,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.zkforge.bwcaptcha</groupId>
+			<artifactId>Captcha</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<version>4.7.0</version>
