scb-ui-zk module #2, export apllication and applicationList to file, filters to CourseApplicationList

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -17,6 +17,7 @@ txt.ui.common.healthInsurance=Zdravotní pojišťovna
 txt.ui.common.representative=Zákonný zástupce
 txt.ui.common.phone=Telefon
 txt.ui.common.email=Email
+txt.ui.common.email.info=Na tuto adresu bude zaslán potvrzující email.
 txt.ui.common.child=dítě
 txt.ui.common.participant=Účastník
 txt.ui.common.createdAt=Datum vytvoření
@@ -28,6 +29,8 @@ txt.ui.common.ToLogin=Přihlásit
 txt.ui.common.ToLogout=Odhlásit
 txt.ui.common.Username=Přihlašovací jméno
 txt.ui.common.password=Heslo
+txt.ui.common.ToDownloadApplication=Stáhnout přihlášku
+txt.ui.common.refreshData=Obnovit data
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -35,7 +38,7 @@ txt.ui.application.personaldataProcessAgreement=Souhlasím se zpracováním osob
 txt.ui.aquacentrumbohumin=aquacentra Bohumín
 txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/provozni-rad-aqua/
 
-msg.ui.validation.err.valueRequired=Hodnota je povinná.
+msg.ui.validation.err.valueRequired=Povinná hodnota.
 msg.ui.validation.err.invalidaEmail=Neplatný formát emailu.
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
 msg.ui.validation.err.WrongValue=Nesprávná hodnota.
