--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,14 +1,20 @@
-txt.ui.organization.name=Plavecký Klub Bohumín
+txt.ui.organization.name=Plavecký klub Bohumín
 txt.ui.organization.phone=+420 604 920 452
-txt.ui.organization.email=plavanibohumin@seznam.cz
-txt.ui.dashboard.welcomeInfo=Vítejte na stránkách portálu Plaveckého klubu Bohumín.
-txt.ui.menu.application=Přihláška do klubu
-txt.ui.menu.applicationWithYear=Přihláška do klubu pro rok {0}
+txt.ui.organization.email=info@pkbohumin.cz
+txt.ui.dashboard.welcomeInfo=Vítejte na stránkách Plaveckého klubu Bohumín.
+txt.ui.menu.application=PŘIHLÁŠKA
+txt.ui.menu.applicationWithYear=Přihláška - plavecký kurz {0}
 txt.ui.menu.dashboard=Úvodní stránka
+txt.ui.menu.applications=Přihlášky
 txt.ui.menu.applicationList=Seznam přihlášek
+txt.ui.menu.courses=Kurzy
+txt.ui.menu.courseNew=Nový kurz
+txt.ui.menu.courseDetail=Detail kurzu
+txt.ui.menu.courseList=Seznam kurzů
 
 txt.ui.login=Přihlášení uživatele
 
+txt.ui.common.contact=Kontakt
 txt.ui.common.firstname=Jméno
 txt.ui.common.surname=Příjmení
 txt.ui.common.birthDate=Datum narození
@@ -31,6 +37,16 @@ txt.ui.common.Username=Přihlašovací jméno
 txt.ui.common.password=Heslo
 txt.ui.common.ToDownloadApplication=Stáhnout přihlášku
 txt.ui.common.refreshData=Obnovit data
+txt.ui.common.name=Název
+txt.ui.common.description=Popis
+txt.ui.common.year=Rok
+txt.ui.common.participantCount=Počet účastníků
+txt.ui.common.lessonPerWeekCount=Počet lekcí týdně
+txt.ui.common.new=Nový
+txt.ui.common.participants=Účastníci
+txt.ui.common.lessons=Lekce
+txt.ui.common.dayOfWeek=Den
+txt.ui.common.time=Čas
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -38,15 +54,17 @@ txt.ui.application.personaldataProcessAgreement=Souhlasím se zpracováním osob
 txt.ui.aquacentrumbohumin=aquacentra Bohumín
 txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/provozni-rad-aqua/
 
-msg.ui.validation.err.valueRequired=Povinná hodnota.
-msg.ui.validation.err.invalidaEmail=Neplatný formát emailu.
+msg.ui.validation.err.valueRequired=Povinné!
+msg.ui.validation.err.invalidaEmail=Neplatný formát!
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
 msg.ui.validation.err.WrongValue=Nesprávná hodnota.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
+msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
+msg.ui.info.courseDeleted=Kurz byl úspěšně odstraněn.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
 
