dao and service for lesson

--- a/scb-ui-zk/pom.xml
+++ b/scb-ui-zk/pom.xml
@@ -163,6 +163,13 @@
 			<version>3.0-alpha-1</version>
 <!-- 			<scope>provided</scope> -->
 		</dependency>
+		
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
