--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -95,6 +95,12 @@
 			<version>7.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
+			
 		<!-- Jackson -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
