--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -47,6 +47,9 @@ txt.ui.common.participants=Účastníci
 txt.ui.common.lessons=Lekce
 txt.ui.common.dayOfWeek=Den
 txt.ui.common.time=Čas
+txt.ui.common.course=Kurz
+txt.ui.common.detail=Detail
+txt.ui.common.remove=Odebrat
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
