courseDetail, add lessons and changes in adding of course participant

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -45,11 +45,14 @@ txt.ui.common.lessonPerWeekCount=Počet lekcí týdně
 txt.ui.common.new=Nový
 txt.ui.common.participants=Účastníci
 txt.ui.common.lessons=Lekce
-txt.ui.common.dayOfWeek=Den
+txt.ui.common.dayOfWeek=Den v týdnu
 txt.ui.common.time=Čas
 txt.ui.common.course=Kurz
 txt.ui.common.detail=Detail
 txt.ui.common.remove=Odebrat
+txt.ui.common.from=Od
+txt.ui.common.to=Do
+txt.ui.common.assignParticipantToCourse=Přiřazení účastníka do kurzu
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -57,6 +60,7 @@ txt.ui.application.personaldataProcessAgreement=Souhlasím se zpracováním osob
 txt.ui.aquacentrumbohumin=aquacentra Bohumín
 txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/provozni-rad-aqua/
 
+# Messages - info, warn, error
 msg.ui.validation.err.valueRequired=Povinné!
 msg.ui.validation.err.invalidaEmail=Neplatný formát!
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
@@ -64,6 +68,7 @@ msg.ui.validation.err.WrongValue=Nesprávná hodnota.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz?
+msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
@@ -71,6 +76,16 @@ msg.ui.info.courseDeleted=Kurz byl úspěšně odstraněn.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
 
+# Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
 msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
 msg.ui.mail.courseApplication.text2=Tým Plaveckého klubu Bohumín.
+
+# Enums
+enum.DayOfWeek.MONDAY=Pondělí
+enum.DayOfWeek.TUESDAY=Úterý
+enum.DayOfWeek.WEDNESDAY=Středa
+enum.DayOfWeek.THURSDAY=Čtvrtek
+enum.DayOfWeek.FRIDAY=Pátek
+enum.DayOfWeek.SATURDAY=Sobota
+enum.DayOfWeek.SUNDAY=Neděle
