notification mail about new course application

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -80,6 +80,10 @@ msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
 msg.ui.mail.courseApplication.text0=Dobrý den,
 msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
 msg.ui.mail.courseApplication.text2=Tým Plaveckého klubu Bohumín.
+msg.ui.mail.subject.newApplication=Nová přihláška - plavecký kurz {0}
+msg.ui.mail.text.newApplication.text0=Prostřednictvím aplikace www.pkbohumin.cz byla přijata nová přihláška do plaveckého kurzu {0}.
+msg.ui.mail.text.newApplication.text1=Účastník (dítě): {0}
+msg.ui.mail.text.newApplication.text2=Zástupce: {0}
 
 # Enums
 enum.DayOfWeek.MONDAY=Pondělí
