course participant list

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -53,6 +53,8 @@ txt.ui.common.remove=Odebrat
 txt.ui.common.from=Od
 txt.ui.common.to=Do
 txt.ui.common.assignParticipantToCourse=Přiřazení účastníka do kurzu
+txt.ui.common.courseParticipantList=Seznam účastníků
+txt.ui.common.participantDetail=Detail účastníka
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
