detail of course participant

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -26,7 +26,7 @@ txt.ui.common.email=Email
 txt.ui.common.email.info=Na tuto adresu bude zaslán potvrzující email.
 txt.ui.common.child=dítě
 txt.ui.common.participant=Účastník
-txt.ui.common.createdAt=Datum vytvoření
+txt.ui.common.createdAt=Vytvořeno / změněno
 txt.ui.common.downloadToFile=Stáhnout do souboru
 txt.ui.common.noDataFound=Nenalezena žádná data
 txt.ui.common.Back=Zpět
@@ -55,6 +55,7 @@ txt.ui.common.to=Do
 txt.ui.common.assignParticipantToCourse=Přiřazení účastníka do kurzu
 txt.ui.common.courseParticipantList=Seznam účastníků
 txt.ui.common.participantDetail=Detail účastníka
+txt.ui.common.results=Výsledky
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
