configuration and participant address to course application

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -11,6 +11,7 @@ txt.ui.menu.courses=Kurzy
 txt.ui.menu.courseNew=Nový kurz
 txt.ui.menu.courseDetail=Detail kurzu
 txt.ui.menu.courseList=Seznam kurzů
+txt.ui.menu.configuration=Nastavení
 
 txt.ui.login=Přihlášení uživatele
 
@@ -56,6 +57,12 @@ txt.ui.common.assignParticipantToCourse=Přiřazení účastníka do kurzu
 txt.ui.common.courseParticipantList=Seznam účastníků
 txt.ui.common.participantDetail=Detail účastníka
 txt.ui.common.results=Výsledky
+txt.ui.common.value=Hodnota
+txt.ui.common.street=Ulice
+txt.ui.common.city=Město
+txt.ui.common.landRegNo=Číslo popisné
+txt.ui.common.houseNo=Číslo orientační
+txt.ui.common.zipCode=PSČ
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -78,6 +85,7 @@ msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněn
 msg.ui.info.courseDeleted=Kurz byl úspěšně odstraněn.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
+msg.ui.warn.courseApplicationsNotAllowed=Přihlášky do plaveckého kurzu nejsou aktuálně otevřené.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
