swim style admin, course participant result list page

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -63,6 +63,15 @@ txt.ui.common.city=Město
 txt.ui.common.landRegNo=Číslo popisné
 txt.ui.common.houseNo=Číslo orientační
 txt.ui.common.zipCode=PSČ
+txt.ui.common.configBasic=Základní nastavení
+txt.ui.common.swimStyleAdmin=Administrace stylů
+txt.ui.common.styles=Styly
+txt.ui.common.all=Vše
+txt.ui.common.style=Styl
+txt.ui.common.distance=Vzdálenost (m)
+txt.ui.common.date=Datum
+txt.ui.common.resultTime=Výsledný čas
+txt.ui.common.result=Výsledek
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -73,16 +82,19 @@ txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/prov
 # Messages - info, warn, error
 msg.ui.validation.err.valueRequired=Povinné!
 msg.ui.validation.err.invalidaEmail=Neplatný formát!
+msg.ui.validation.err.invalidFormat=Neplatný formát!
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
 msg.ui.validation.err.WrongValue=Nesprávná hodnota.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz?
+msg.ui.quest.deleteItem=Opravdu si přejete odstranit položku?
 msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
 msg.ui.info.courseDeleted=Kurz byl úspěšně odstraněn.
+msg.ui.info.itemDeleted=Položka byla úspěšně odstraněna.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
 msg.ui.warn.courseApplicationsNotAllowed=Přihlášky do plaveckého kurzu nejsou aktuálně otevřené.
