--- a/scb-ui-zk/pom.xml
+++ b/scb-ui-zk/pom.xml
@@ -170,6 +170,12 @@
 			<version>1.2</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>2.9.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
