--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -4,3 +4,4 @@ msg.validation.warn.courseApplication.notExistsInDB=P\u0159ihl\u00e1\u0161ku nel
 msg.validation.warn.lesson.sameTimeIntervalAsOtherLesson=Ve stejn\u00fd \u010das ji\u017e pro tento kurz existuje lekce.
 msg.validation.warn.recordNotExistsInDB=Z\u00e1znam nelze odstranit, proto\u017ee ji\u017e v datab\u00e1zi neexistuje. Prove\u010fte obnoven\u00ed v prohl\u00ed\u017ee\u010di.
 msg.validation.warn.itemWithSameTypeAndNameAlreadyExists=Polo\u017eka se stejn\u00fdm n\u00e1zvem ji\u017e existuje.
+msg.validation.warn.styleCannotBeDeleteBecauseUsedInResult=Styl nelze odstranit, proto\u017ee je pou\u017eit ve v\u00fdsledku \u00fa\u010dastn\u00edka.
