--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -126,6 +126,12 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
