shared pom, unexpeced exception handling, deleting items add info about record to question and confirmation info

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,6 +1,7 @@
 txt.ui.organization.name=Plavecký klub Bohumín
 txt.ui.organization.phone=+420 604 920 452
 txt.ui.organization.email=info@pkbohumin.cz
+txt.ui.administrator.email=jakub.zaoralek@gmail.com
 txt.ui.dashboard.welcomeInfo=Vítejte na stránkách Plaveckého klubu Bohumín.
 txt.ui.menu.application=PŘIHLÁŠKA
 txt.ui.menu.applicationWithYear=Přihláška - plavecký kurz {0}
@@ -86,6 +87,13 @@ txt.ui.common.Role=Role
 txt.ui.common.UserDetail=Detail uživatele
 txt.ui.common.NewUser=Nový uživatel
 txt.ui.common.resetPassword=Reset hesla
+txt.ui.common.version=Verze
+txt.ui.common.user=Uživatel
+txt.ui.common.page=Page
+
+txt.ui.internalError=Interní chyba aplikace
+txt.ui.internalErrorCaught=Nastala interní chyba aplikace, zpráva o výskytu chyby byla odeslána na emailovou adresu správce.
+txt.ui.ToClose=Zavřít
 
 txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
@@ -105,18 +113,20 @@ msg.ui.validation.err.passwordNotDifferentThanPreviousOne=Neliší se od předch
 msg.ui.validation.err.notContainsNumber=Neobsahuje žádné číslo.
 msg.ui.validation.err.notContainsCapitalLetter=Neobsahuje velké písmeno.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
-msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku?
-msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz?
-msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele?
+msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
+msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
+msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
+msg.ui.quest.deleteItem.arg=Opravdu si přejete odstranit položku "{0}"?
 msg.ui.quest.deleteItem=Opravdu si přejete odstranit položku?
 msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
-msg.ui.info.applicationDeleted=Přihláška do klubu byla úspěšně odstraněna.
-msg.ui.info.courseDeleted=Kurz byl úspěšně odstraněn.
-msg.ui.info.userDeleted=Uživatel byl úspěšně odstraněn.
-msg.ui.info.itemDeleted=Položka byla úspěšně odstraněna.
-msg.ui.info.passwordChanged=Heslo bylo úspěšně změněno.
+msg.ui.info.applicationDeleted=Přihláška "{0}" byla odstraněna.
+msg.ui.info.courseDeleted=Kurz "{0}" byl odstraněn.
+msg.ui.info.userDeleted=Uživatel "{0}" byl odstraněn.
+msg.ui.info.itemDeleted=Položka byla odstraněna.
+msg.ui.info.itemDeleted.arg=Položka "{0}" byla odstraněna.
+msg.ui.info.passwordChanged=Heslo bylo změněno.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
 msg.ui.warn.courseApplicationsNotAllowed=Přihlášky do plaveckého kurzu nejsou aktuálně otevřené.
