--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -45,6 +45,14 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 		</dependency>
+		
+		<!-- Spring test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-version}</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- SLF4J -->
 		<dependency>
