--- a/scb-ui-zk/pom.xml
+++ b/scb-ui-zk/pom.xml
@@ -15,6 +15,7 @@
 	
 	<properties>
 		<zk.version>8.0.1.1</zk.version>
+		<warPluginVersion>2.6</warPluginVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -181,13 +182,29 @@
 					</webApp>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${warPluginVersion}</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<archive>
+						<manifestEntries>
+							<Project-version>${project.version}</Project-version>
+							<Build-number>${BUILD_NUMBER}</Build-number>
+							<Build-id>${BUILD_TAG}</Build-id>
+							<!-- toto zatim neni dotazene v jenkinsovi <Build-revision>${build.revision}</Build-revision> -->
+							<Build-timestamp>${maven.build.timestamp}</Build-timestamp>
+							<Application-version>${project.version}-${maven.build.timestamp}</Application-version>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
