--- a/scb-data-service/src/test/resources/P3400343.properties
+++ b/scb-data-service/src/test/resources/P3400343.properties
@@ -1,3 +1,3 @@
-db_url=jdbc:mysql://localhost:3306/scb
-db_user=scb
-db_pwd=scb
+db_url=jdbc:mysql://localhost:3306/scb_junit
+db_user=scb_junit
+db_pwd=scb_junit
