add residence to export

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -90,6 +90,7 @@ txt.ui.common.resetPassword=Reset hesla
 txt.ui.common.version=Verze
 txt.ui.common.user=Uživatel
 txt.ui.common.page=Page
+txt.ui.common.residence=Bydliště
 
 txt.ui.internalError=Interní chyba aplikace
 txt.ui.internalErrorCaught=Nastala interní chyba aplikace, zpráva o výskytu chyby byla odeslána na emailovou adresu správce.
