add payed attribute to courseParticipant

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -91,6 +91,10 @@ txt.ui.common.version=Verze
 txt.ui.common.user=Uživatel
 txt.ui.common.page=Page
 txt.ui.common.residence=Bydliště
+txt.ui.common.payed=Zaplaceno
+txt.ui.common.inCourse=V kurzu
+txt.ui.common.yes=Ano
+txt.ui.common.no=Ne
 
 txt.ui.internalError=Interní chyba aplikace
 txt.ui.internalErrorCaught=Nastala interní chyba aplikace, zpráva o výskytu chyby byla odeslána na emailovou adresu správce.
