lesson attendance ui

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -95,6 +95,24 @@ txt.ui.common.payed=Zaplaceno
 txt.ui.common.inCourse=V kurzu
 txt.ui.common.yes=Ano
 txt.ui.common.no=Ne
+txt.ui.common.previousMonth=Předchozí měsíc
+txt.ui.common.nextMonth=Následující měsíc
+txt.ui.common.lessonProcessed=Lekce proběhla
+txt.ui.common.lessonDetail=Detail lekce
+txt.ui.common.description=Poznámka
+
+txt.ui.month.0=Leden
+txt.ui.month.1=Únor
+txt.ui.month.2=Březen
+txt.ui.month.3=Duben
+txt.ui.month.4=Květen
+txt.ui.month.5=Červen
+txt.ui.month.6=Červenec
+txt.ui.month.7=Srpen
+txt.ui.month.8=Září
+txt.ui.month.9=Říjen
+txt.ui.month.10=Listopad
+txt.ui.month.11=Prosinec
 
 txt.ui.internalError=Interní chyba aplikace
 txt.ui.internalErrorCaught=Nastala interní chyba aplikace, zpráva o výskytu chyby byla odeslána na emailovou adresu správce.
@@ -105,6 +123,8 @@ txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotn
 txt.ui.application.personaldataProcessAgreement=Souhlasím se zpracováním osobních údajů podle zákona č. 101/2000 Sb.Souhlasím s možností fotografování svého syna/dcery a s možností zveřejnění fotografií nebo videa v rámci propagace Plaveckého klubu Bohumín. Potvrzuji, že jsem se seznámil s Provozním řádem 
 txt.ui.aquacentrumbohumin=aquacentra Bohumín
 txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/provozni-rad-aqua/
+
+txt.ui.heading.learningCourse=Výuka kurzu {0}
 
 # Messages - info, warn, error
 msg.ui.validation.err.valueRequired=Povinné!
@@ -164,13 +184,13 @@ msg.ui.mail.text.reset.text3=Nové heslo: {0}
 msg.ui.mail.text.reset.text4=Tým Plaveckého klubu Bohumín.
 
 # Enums
-enum.DayOfWeek.MONDAY=Pondělí
-enum.DayOfWeek.TUESDAY=Úterý
-enum.DayOfWeek.WEDNESDAY=Středa
-enum.DayOfWeek.THURSDAY=Čtvrtek
-enum.DayOfWeek.FRIDAY=Pátek
-enum.DayOfWeek.SATURDAY=Sobota
-enum.DayOfWeek.SUNDAY=Neděle
+enum.DayOfWeek.MONDAY=pondělí
+enum.DayOfWeek.TUESDAY=úterý
+enum.DayOfWeek.WEDNESDAY=středa
+enum.DayOfWeek.THURSDAY=čtvrtek
+enum.DayOfWeek.FRIDAY=pátek
+enum.DayOfWeek.SATURDAY=sobota
+enum.DayOfWeek.SUNDAY=neděle
 
 enum.ScbUserRole.USER=Uživatel
 enum.ScbUserRole.ADMIN=Trenér
