--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -100,6 +100,7 @@ txt.ui.common.nextMonth=Následující měsíc
 txt.ui.common.lessonProcessed=Lekce proběhla
 txt.ui.common.lessonDetail=Detail lekce
 txt.ui.common.description=Poznámka
+txt.ui.common.attendance=Docházka
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
